...
                            <constraint firstItem="4UU-9f-hrj" firstAttribute="bottom" secondItem="VaH-TN-fqP" secondAttribute="bottom" constant="20" id="5Jy-sf-Amt"/>
                            <constraint firstItem="VaH-TN-fqP" firstAttribute="leading" secondItem="4UU-9f-hrj" secondAttribute="leading" constant="20" id="Z0m-MF-4jj"/>
                            <constraint firstItem="VaH-TN-fqP" firstAttribute="top" secondItem="4UU-9f-hrj" secondAttribute="top" constant="20" id="hf7-9B-jIb"/>
                            <constraint firstItem="4UU-9f-hrj" firstAttribute="trailing" secondItem="VaH-TN-fqP" secondAttribute="trailing" constant="20" id="p3W-re-uhS"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Noise Makers" id="nf0-wY-jnT">
                        <barButtonItem key="leftBarButtonItem" title="Login" id="P6f-9u-MOw">
                            <connections>
                                <action selector="loginButtonTapped:" destination="9my-0c-A1l" id="nfB-uG-t3X"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Rg6-em-OjZ">
...
